?쇨렐 ?섎떦 怨꾩궛湲?PWA ?명똿 諛?泥??낅줈??

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <meta name="description" content="근로기준법 기준 야근 수당 자동 계산 앱 - 연장근로, 심야근로, 주말수당을 정확하게 계산합니다" />
-    <meta name="theme-color" content="#2563eb" />
-    <title>야근 요정 - 수당 자동 계산기</title>
+    <meta name="description" content="근로기준법 기준 야근·연장·심야·주말 수당 자동 계산 앱" />
+    <meta name="theme-color" content="#4f46e5" />
+    <!-- iOS PWA 지원 -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="야근계산기" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <title>야근계산기 - 야근수당 자동계산</title>
 </head>
 
 <body>
