PWA ?ㅼ튂(Install) ?꾨꼍 ?곸슜 諛??꾩씠肄??뚯씪 ?앹꽦

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/icon-192.png" />
+    <link rel="icon" type="image/svg+xml" href="/icon-192.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="description" content="근로기준법 기준 야근·연장·심야·주말 수당 자동 계산 앱" />
     <meta name="theme-color" content="#4f46e5" />
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="야근계산기" />
-    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <link rel="apple-touch-icon" href="/icon-192.svg" />
     <title>야근계산기 - 야근수당 자동계산</title>
 </head>
 
